# django-api-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yml  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/apps/core/: exceptions.py
{{cookiecutter.project_slug}}/apps/core/middleware/: security.py
{{cookiecutter.project_slug}}/apps/core/models/: base.py
{{cookiecutter.project_slug}}/apps/core/utils/: drf_response.py
{{cookiecutter.project_slug}}/config/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: __init__.py  base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/config/settings/components/: cache.py  database.py  email.py  logging.py  security.py
{{cookiecutter.project_slug}}/tests/factories/: user.py
