[tool.poetry]
name = "django-api-cookiecutter"
version = "0.1.0"
description = "A Cookiecutter template for scaffolding Django Rest Framework projects."
readme = "README.md"
keywords = [
  "cookiecutter",
  "django",
  "project template",
  "scaffolding",
  "skeleton",
]
license = "BSD"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-cookies = "^0.7.0"
pytest-instafail = "^0.5.0"
cookiecutter = "^2.6.0"
ruff = "^0.8.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
